# AnNa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  server.ts
.github/agents/: aNnA.agent.md
.github/workflows/: codeql.yml  deploy.yml  release.yml
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src/api/: authApi.ts  fileApi.ts  foldersApi.ts  groupsApi.ts  labelsApi.ts  statusApi.ts
client/src/components/: AdminPanel.tsx  FileList.tsx  FileUploader.tsx  GroupsPanel.tsx  LabelManager.tsx  LoginButton.tsx  PeerStatus.tsx
client/src/hooks/: useWebSocket.ts
public/: manifest.json  sw.js
server/: .env.example  Cargo.toml
server/src/: auth.rs  cdc.rs  database.rs  folders.rs  groups.rs  labels.rs  main.rs  quic.rs  signaling.rs  status.rs  storage.rs
