[package]
name = "anna-sync-server"
version = "0.1.0"
edition = "2021"
authors = ["AnNa Team"]

[dependencies]
# Web framework with HTTP/2 and HTTP/3 support
axum = { version = "0.7", features = ["http2", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-br", "trace"] }

# WebSocket for signaling
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing and crypto
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# File handling
tokio-util = { version = "0.7", features = ["io"] }

# Content-defined chunking
fastcdc = "3.1"

# Compression (kept for legacy file decompression)
brotli = "3.5"
async-compression = { version = "0.4", features = ["tokio", "brotli", "zstd"] }

# QUIC / HTTP3
# quinn: QUIC transport layer (RFC 9000)
# h3: HTTP/3 framing over QUIC streams
# h3-quinn: binds h3 to quinn's async stream API
# h3-axum: bridges h3 connection acceptance to Axum's Router
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.8"
h3-axum = "0.2"

# TLS (required by QUIC; rcgen generates a self-signed cert at startup)
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
